fixed image overflow issue

--- a/ts/packages/shell/src/renderer/assets/styles.less
+++ b/ts/packages/shell/src/renderer/assets/styles.less
@@ -16,6 +16,8 @@ body {
 img {
   max-width: 320px;
   max-height: 320px;
+  width: 100%;
+  height: 100%;
 }
 
 .wrapper {
